--- a/src/components/chart/chart.html
+++ b/src/components/chart/chart.html
@@ -3,5 +3,6 @@
 
 <div style="width:100%;"
      data-bind="visible: entityNames() && entityNames().length == 0">
-    <p>No schools matched the selected filters. Please try different parameters.</p>
+    <p data-bind="visible: tooManySchools">There are too many schools to display.<br>Please try different parameters.</p>
+    <p data-bind="visible: !tooManySchools()">No schools matched the selected filters.<br>Please try different parameters.</p>
 </div>
