--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -80,9 +80,11 @@
             </div>
 
             <div class="col-md-4">
-                <selection></selection>
-                <filter></filter>
-                <display-options></display-options>
+                <div class="panel panel-default">
+                    <selection></selection>
+                    <display-options></display-options>
+                    <filter></filter>
+                </div>
             </div>
         </div>
     </div>
