--- a/src/components/filter/filter.html
+++ b/src/components/filter/filter.html
@@ -1,78 +1,79 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">
-            <a data-toggle="collapse" data-target="#collapseFilter" name="collapseFilter">
-                School Filter
-            </a>
-        </h3>
-    </div>
-    <div id="collapseFilter" class="panel-collapse collapse in">
-        <div class="panel-body">
-            <label class="control-label">
-                <input type="checkbox" value="" data-bind="checked: includeAcademies">
-                <strong>Academies</strong>
-            </label>
-            <label class="control-label">
-                <input type="checkbox" value="" data-bind="checked: includeFreeSchools">
-                <strong>Free schools</strong>
-            </label>
-            <label class="control-label">
-                <input type="checkbox" value="" data-bind="checked: includeLaMaintained">
-                <strong>LA maintained schools</strong>
-            </label>
+<div class="panel-heading">
+    <a data-toggle="collapse" data-target="#collapseFilter" name="collapseFilter">
+        Filters
+    </a>
+</div>
+<div id="collapseFilter" class="panel-collapse collapse in">
+    <div class="panel-body">
 
-            <br>
+        <h5>School type</h5>
 
-            <label class="control-label">
-                <input id="fsmFilterOn" type="checkbox" value="" data-bind="checked: fsmFilterOn">
-                <strong>Percentage of pupils disadvantaged</strong>
-            </label>
-            <div data-bind="visible: fsmFilterOn">
-                <div class="visible-md visible-lg">
-                    <div data-bind="slider: { values: fsmRange, realtime: true }"></div>
-                    <div style="text-align: center">
-                        <p>
-                            <span data-bind="text: fsmMin"></span>% - <span data-bind="text: fsmMax"></span>%
-                        </p>
-                    </div>
-                </div>
-                <div class="form-inline visible-xs visible-sm">
-                    <div class="form-group">
-                        <label for="fsmMin">Min %</label>
-                        <input type="number" data-bind="value: fsmMinNumberInput" class="form-control"
-                               id="fsmMin" min="0" max="100" step="1">
-                        <label for="fsmMax">Max %</label>
-                        <input type="number" data-bind="value: fsmMaxNumberInput" class="form-control"
-                               id="fsmMax" min="0" max="100" step="1">
-                    </div>
-                    <hr>
+        <label class="control-label">
+            <input type="checkbox" value="" data-bind="checked: includeAcademies">
+            <strong>Academies</strong>
+        </label>
+        <label class="control-label">
+            <input type="checkbox" value="" data-bind="checked: includeFreeSchools">
+            <strong>Free schools</strong>
+        </label>
+        <label class="control-label">
+            <input type="checkbox" value="" data-bind="checked: includeLaMaintained">
+            <strong>LA maintained schools</strong>
+        </label>
+
+        <h5>Intake characteristics</h5>
+
+        <label class="control-label">
+            <input id="fsmFilterOn" type="checkbox" value="" data-bind="checked: fsmFilterOn">
+            <strong>Percentage of pupils disadvantaged</strong>
+        </label>
+
+        <div data-bind="visible: fsmFilterOn">
+            <div class="visible-md visible-lg">
+                <div data-bind="slider: { values: fsmRange, realtime: true }"></div>
+                <div style="text-align: center">
+                    <p>
+                        <span data-bind="text: fsmMin"></span>% - <span data-bind="text: fsmMax"></span>%
+                    </p>
                 </div>
             </div>
-
-            <br data-bind="visible: !fsmFilterOn()">
-
-            <label class="control-label">
-                <input id="apsFilterOn" type="checkbox" value="" data-bind="checked: apsFilterOn">
-                <strong>KS2 APS</strong>
-            </label>
-            <div data-bind="visible: apsFilterOn">
-                <div class="visible-md visible-lg">
-                    <div class="" data-bind="slider: { values: apsRange, realtime: true }"></div>
-                    <div style="text-align: center">
-                        <p>
-                            <span data-bind="text: apsMin"></span> - <span data-bind="text: apsMax"></span>
-                        </p>
-                    </div>
+            <div class="form-inline visible-xs visible-sm">
+                <div class="form-group">
+                    <label for="fsmMin">Min %</label>
+                    <input type="number" data-bind="value: fsmMinNumberInput" class="form-control"
+                           id="fsmMin" min="0" max="100" step="1">
+                    <label for="fsmMax">Max %</label>
+                    <input type="number" data-bind="value: fsmMaxNumberInput" class="form-control"
+                           id="fsmMax" min="0" max="100" step="1">
                 </div>
-                <div class="form-inline visible-xs visible-sm">
-                    <div class="form-group">
-                        <label for="apsMin">Min %</label>
-                        <input type="number" data-bind="value: apsMinNumberInput" class="form-control"
-                               id="apsMin" min="15" max="30" step="1">
-                        <label for="apsMax">Max %</label>
-                        <input type="number" data-bind="value: apsMaxNumberInput" class="form-control"
-                               id="apsMax" min="15" max="30" step="1">
-                    </div>
+                <hr>
+            </div>
+        </div>
+
+        <br data-bind="visible: !fsmFilterOn()">
+
+        <label class="control-label">
+            <input id="apsFilterOn" type="checkbox" value="" data-bind="checked: apsFilterOn">
+            <strong>KS2 APS</strong>
+        </label>
+
+        <div data-bind="visible: apsFilterOn">
+            <div class="visible-md visible-lg">
+                <div class="" data-bind="slider: { values: apsRange, realtime: true }"></div>
+                <div style="text-align: center">
+                    <p>
+                        <span data-bind="text: apsMin"></span> - <span data-bind="text: apsMax"></span>
+                    </p>
+                </div>
+            </div>
+            <div class="form-inline visible-xs visible-sm">
+                <div class="form-group">
+                    <label for="apsMin">Min %</label>
+                    <input type="number" data-bind="value: apsMinNumberInput" class="form-control"
+                           id="apsMin" min="15" max="30" step="1">
+                    <label for="apsMax">Max %</label>
+                    <input type="number" data-bind="value: apsMaxNumberInput" class="form-control"
+                           id="apsMax" min="15" max="30" step="1">
                 </div>
             </div>
         </div>
