--- a/src/components/selection/selection.html
+++ b/src/components/selection/selection.html
@@ -36,7 +36,7 @@
                    data-bind="css: { 'active': viewLevel() === 'Region'}">
                 <input type="radio" name="options" id="viewRegion"
                        data-bind="checked: viewLevel, checkedValue: 'Region'">
-                <span data-bind="visible: !selectedRegion()">Great Britain</span>
+                <span data-bind="visible: !selectedRegion()">England</span>
                 <span data-bind="visible: selectedRegion(), text: selectedRegion()"></span>
             </label>
             <label class="btn btn-default btn-sm"
@@ -70,7 +70,6 @@
             </div>
 
             <div class="form-group">
-                 <!--data-bind="visible: !(dataLevel() === 'Region' && viewLevel() === 'Region')">-->
                 <label for="selectLEA" class="col-sm-3 control-label"
                        data-bind="css: { 'text-warning': tooManySchools() || (viewLevel() === 'LEA' && !selectedLea()) }">
                     Local authority
