--- a/src/components/loading/loading.html
+++ b/src/components/loading/loading.html
@@ -1,18 +1,23 @@
 <div class="loading-screen">
-    <div class="col-xs-8 col-xs-offset-2" style="position:absolute; top:50%; margin-top:-7em">
+    <div class="col-xs-8 col-xs-offset-2" style="position:absolute; top:41%; margin-top:-7em">
         <div class="page-header">
             <hgroup style="text-align:center">
+
                 <h1>
-                    <i class="text-success glyphicon glyphicon-education glyphicon-spin"></i>
-                    Eduvis<br>
-                    <small>Loading 2014 schools data...</small>
+                    <i class="text-warning glyphicon glyphicon-education glyphicon-spin "></i><br>
+                    <img style="max-width:100%;" src="img/logo_black.svg" class="pull-center"><br>
+                    <small>
+                        <span class="ellipsis" style="opacity:0;"></span>
+                        <span class="ellipsis-reverse" style="opacity:0;"></span>Loading schools data<span class="ellipsis"></span>
+                        <span class="ellipsis-reverse" style="opacity:0"></span>
+                    </small>
                 </h1>
             </hgroup>
         </div>
-        <p class="loading-status text-info" style="text-align:center">
+        <p class="loading-status" style="text-align:center">
             Visualising UK education data.<br><br>
-            <i class="glyphicon glyphicon-info-sign"></i><a class="text-primary" href="#about">ABOUT</a>
-            <i class="glyphicon glyphicon-pencil"></i><a class="text-primary" href="#blog">BLOG</a>
+            <i class="glyphicon glyphicon-info-sign"></i><a class="text-warning" href="#about"> About </a>
+            <i class="glyphicon glyphicon-pencil"></i><a class="text-warning" href="#blog"> Blog </a>
         </p>
     </div>
 </div>
