Fix loading ellipsis

--- a/src/components/loading/loading.html
+++ b/src/components/loading/loading.html
@@ -6,10 +6,7 @@
                 <h1>
                     <i class="text-warning glyphicon glyphicon-education glyphicon-spin "></i><br>
                     <img style="max-width:100%;" src="img/logo_black.svg" class="pull-center"><br>
-                    <small>
-                        <span class="ellipsis" style="opacity:0;"></span>
-                        <span class="ellipsis-reverse" style="opacity:0;"></span>Loading schools data<span class="ellipsis"></span>
-                        <span class="ellipsis-reverse" style="opacity:0"></span>
+                    <small>Loading schools data<span class="ellipsis"></span>
                     </small>
                 </h1>
             </hgroup>
