Change lingering LA to local authority

--- a/src/components/filter/filter.html
+++ b/src/components/filter/filter.html
@@ -18,7 +18,7 @@
         </label>
         <label class="control-label">
             <input type="checkbox" value="" data-bind="checked: includeLaMaintained">
-            <strong>LA maintained schools</strong>
+            <strong>Local authority maintained schools</strong>
         </label>
 
         <h5>Intake characteristics</h5>
