--- a/src/components/chart/chart.html
+++ b/src/components/chart/chart.html
@@ -1,9 +1,23 @@
-<div id="myChart" style="width:100%; height:500px;"
-     data-bind="visible: entityNames() && entityNames().length"></div>
+<div class="row" data-bind="visible: entityNames() && entityNames().length">
+    <div class="col-xs-12">
+        <div id="myChart" style="width:100%; height:500px;"></div>
+    </div>
+
+    <div class="col-xs-12" style="margin-top: -6px;">
+        <small data-bind="visible: verticalChart" class="text-muted">
+            Use the navigation bar above to zoom and scroll.
+        </small>
+        <small data-bind="visible: !verticalChart()" class="text-muted">
+            Click and drag on the chart to zoom. Use the scroll bar above to scroll. Click 'Reset Zoom' to reset selection.
+        </small>
+    </div>
+</div>
+
 
 <div style="width:100%;"
      data-bind="visible: entityNames() && entityNames().length == 0">
     <h3 data-bind="text: selectionSummary"></h3>
+    <h5 data-bind="text: filterSummary"></h5>
     <p data-bind="visible: tooManySchools" class="text-warning">There are too many schools to display. Please try different parameters.</p>
     <p data-bind="visible: !tooManySchools()" class="text-warning">No schools matched the selected filters. Please try different parameters.</p>
 </div>
