Collapse filters and comparators by default

--- a/src/components/display-options/display-options.html
+++ b/src/components/display-options/display-options.html
@@ -30,11 +30,11 @@
     </div>
 </div>
 <div class="panel-heading">
-    <a data-toggle="collapse" data-target="#collapseDispAvg" name="collapseDispAvg">
+    <a class="collapsed" data-toggle="collapse" data-target="#collapseDispAvg" name="collapseDispAvg">
         Comparators
     </a>
 </div>
-<div id="collapseDispAvg" class="panel-collapse collapse in">
+<div id="collapseDispAvg" class="panel-collapse collapse">
     <div class="panel-body">
         <div class="checkbox">
             <label>
