--- a/src/components/filter/filter.html
+++ b/src/components/filter/filter.html
@@ -1,9 +1,9 @@
 <div class="panel-heading">
-    <a data-toggle="collapse" data-target="#collapseFilter" name="collapseFilter">
+    <a class="collapsed" data-toggle="collapse" data-target="#collapseFilter" name="collapseFilter">
         Filters
     </a>
 </div>
-<div id="collapseFilter" class="panel-collapse collapse in">
+<div id="collapseFilter" class="panel-collapse collapse">
     <div class="panel-body">
 
         <h5>School type</h5>
