Added table view

--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -53,9 +53,7 @@
 
                                     </div>
                                     <div class="tab-pane" data-bind="css: { active: isTableSelected }">
-                                        <div class="well well-lg" style="width:100%; height:400px;">
-                                            <h3>Table view coming soon...</h3>
-                                        </div>
+                                        <tableview params="isSelected: isTableSelected"></tableview>
                                     </div>
                                     <div class="tab-pane" data-bind="css: { active: isMapSelected }">
 
