Add datatables images

--- a/src/components/about-page/about.html
+++ b/src/components/about-page/about.html
@@ -58,7 +58,7 @@
                 <div class="col-md-4">
                     <center>
                         <a href="https://uk.linkedin.com/pub/chris-hall/93/697/292">
-                            <img src="img/chris.jpg" name="aboutme" width="140" height="140" border="0"
+                            <img src="images/chris.jpg" name="aboutme" width="140" height="140" border="0"
                                  class="img-circle">
                         </a>
 
@@ -90,7 +90,7 @@
                 <div class="col-md-4">
                     <center>
                         <a href="https://uk.linkedin.com/in/axwalker">
-                            <img src="img/andrew.jpg" name="aboutme" width="140" height="140" border="0"
+                            <img src="images/andrew.jpg" name="aboutme" width="140" height="140" border="0"
                                  class="img-circle">
                         </a>
 
