--- a/src/components/loading/loading.html
+++ b/src/components/loading/loading.html
@@ -5,7 +5,7 @@
 
                 <h1>
                     <i class="text-warning glyphicon glyphicon-education glyphicon-spin "></i><br>
-                    <img style="max-width:100%;" src="img/logo_black.svg" class="pull-center"><br>
+                    <img style="max-width:100%;" src="images/logo_black.svg" class="pull-center"><br>
                     <small>Loading schools data<span class="ellipsis"></span>
                     </small>
                 </h1>
