--- a/src/components/nav-bar/nav-bar.html
+++ b/src/components/nav-bar/nav-bar.html
@@ -14,7 +14,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">
-        <img style="max-width:100px; margin-top: -3px;" src="img/logo.svg" class="pull-left">
+        <img style="max-width:100px; margin-top: -3px;" src="images/logo.svg" class="pull-left">
       </a>
       <!--<a class="navbar-brand" href="#">Eduvis</a>-->
     </div>
